--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "babel-seed",
-  "version": "0.0.2",
+  "version": "0.1.0",
   "description": "",
   "main": "build/server.js",
   "scripts": {
@@ -15,16 +15,16 @@
   "dependencies": {
     "backbone": "^1.3.3",
     "backbone.marionette": "^3.3.0",
-    "backbone_app": "^0.0.3",
     "bluebird": "^3.4.7",
     "body-parser": "^1.16.1",
     "bootstrap": "^3.3.7",
-    "chalk": "^1.1.3",
+    "chalk": "^2.1.0",
     "express": "^4.14.1",
     "jquery": "^3.1.1",
     "lodash": "^4.17.4",
     "pg-promise": "^5.5.8",
-    "serve-favicon": "^2.4.0"
+    "serve-favicon": "^2.4.0",
+    "winston": "^2.3.1"
   },
   "devDependencies": {
     "babel-cli": "^6.23.0",
