--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "babel-seed",
-  "version": "0.2.0",
+  "version": "1.0.0",
   "description": "",
   "main": "build/server.js",
   "scripts": {
@@ -24,13 +24,13 @@
     "lodash": "^4.17.4",
     "pg-promise": "^5.5.8",
     "serve-favicon": "^2.4.0",
+    "shintech-utils": "^0.0.3",
     "winston": "^2.3.1"
   },
   "devDependencies": {
     "babel-cli": "^6.23.0",
     "babel-loader": "^7.0.0",
-    "babel-preset-es2015-node6": "^0.4.0",
-    "babel-preset-latest": "^6.22.0",
+    "babel-preset-env": "^1.6.1",
     "chai": "^3.5.0",
     "chai-http": "^3.0.0",
     "css-loader": "^0.28.1",
